# dnd-tui

./: .env  .gitignore  5e.db  Cargo.toml  README.md
migrations/2021-05-10-141628_create_spells/: down.sql  up.sql
src/: app.rs  components.rs  components_ui.rs  db_utils.rs  events.rs  input_buffer.rs  main.rs  models.rs  schema.rs  select_events.rs
src/documents/: ability_scores.rs  alignments.rs  backgrounds.rs  classes.rs  common.rs  conditions.rs  damage_types.rs  equipment.rs  equipment_categories.rs  features.rs  languages.rs  levels.rs  magic_items.rs  mod.rs  monsters.rs  proficiencies.rs  races.rs  rule_sections.rs  rules.rs  schools.rs  skills.rs  spells.rs  starting_equipment.rs  subclasses.rs  subraces.rs  traits.rs  weapon_properties.rs
src/spell_search/: mod.rs  ui.rs  util.rs
