[package]
name = "dnd_tui"
version = "0.1.0"
authors = ["zschira <zachary.w.schira@nasa.gov>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.15"
termion = "1.5"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0.125", features = ["derive"] }
simple-logging = "2.0.2"
log = "0.4.14"
ejdb = "0.4.1"
bson = "1.2.2"
